<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Iconify</string>
    <string name="app_motto">Customize Boring Android UI</string>
    <string name="init_module_installation">Initializing setup</string>
    <string name="step">Step</string>
    <string name="step_number">Step %1$d/%2$d</string>
    <string name="module_installation_step1">Creating module shell</string>
    <string name="module_installation_step2">Extracting necessary files</string>
    <string name="module_installation_step3">Creating overlay APKs</string>
    <string name="module_installation_step4">Aligning overlay APKs</string>
    <string name="module_installation_step5">Signing overlay APKs</string>
    <string name="module_installation_step6">Cleaning directories</string>
    <string name="onboarding_title_1">Got Bored of Stock UI ?</string>
    <string name="onboarding_subtitle_1">Let\'s customize everything to our likings.</string>
    <string name="onboarding_desc_1">Ditch the stock UI monotony – personalize every tech detail to match your style and preferences.</string>
    <string name="onboarding_title_2">Is My Device Supported ?</string>
    <string name="onboarding_subtitle_2">Iconify supports all Pixel and AOSP ROMs.</string>
    <string name="onboarding_desc_2">Compatible with all Pixel and AOSP-based ROMs, ensuring broad support for Android devices.</string>
    <string name="onboarding_title_3">Shall We Begin Now ?</string>
    <string name="onboarding_subtitle_3">It is time for iconify to do some internal work.</string>
    <string name="onboarding_desc_3">Starting internal tasks, marking the initiation of essential work. Ready to begin?</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="need_storage_perm_title">Need Storage Permission</string>
    <string name="need_storage_perm_desc">Storage permission is required to build the necessary files.</string>
    <string name="notification_perm_title">Allow Notifications</string>
    <string name="notification_perm_desc">Needed to notify you about available updates and to display test notifications.</string>
    <string name="optional_permission">Granting these permissions is optional!</string>
    <string name="compatible_root_not_found_title">Could Not Find Compatible Root Method</string>
    <string name="compatible_root_not_found_desc">Use any popular root solutions to proceed.</string>
    <string name="root_not_found_title">Root Is Not Accessible</string>
    <string name="root_not_found_desc">Looks like your device is not rooted!</string>
    <string name="metamodule_not_found_title">Metamodule not installed</string>
    <string name="metamodule_not_found_desc">KernelSU 3.0.0 and newer require the Metamodule to enable systemless /system modifications.</string>
    <string name="need_reboot_title">Need Device Reboot</string>
    <string name="need_reboot_desc">Reboot your device to put all files in place.</string>
    <string name="installation_failed_title">Oops Did Not Expect That</string>
    <string name="installation_failed_desc">Logs have been saved in documents folder.</string>
    <string name="logs">Logs</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="activity_title_color_engine">Color Engine</string>
    <string name="activity_desc_color_engine">Have control over colors</string>
    <string name="activity_title_ui_roundness">UI Roundness</string>
    <string name="activity_desc_ui_roundness">Change corner radius of interface</string>
    <string name="activity_title_qs_row_column">Row and Column</string>
    <string name="activity_desc_qs_row_column">Change Qs tile rows and columns</string>
    <string name="activity_title_qs_icon_label">Icon and Label</string>
    <string name="activity_desc_qs_icon_label">Change icon and label options</string>
    <string name="activity_title_qs_tile_size">QS Tile Size</string>
    <string name="activity_desc_qs_tile_size">Change height of QS panel tile</string>
    <string name="activity_title_qs_panel_margin">QS Panel Margin</string>
    <string name="activity_desc_qs_panel_margin">Modify quick settings margins</string>
    <string name="activity_title_statusbar">Statusbar</string>
    <string name="activity_desc_statusbar">Modify statusbar interface</string>
    <string name="activity_title_navigation_bar">Navigation Bar</string>
    <string name="activity_desc_navigation_bar">Tweak navigation options</string>
    <string name="activity_title_volume_panel">Volume Panel</string>
    <string name="activity_desc_volume_panel">Customize volume panel design</string>
    <string name="activity_title_media_player">Media Player</string>
    <string name="activity_desc_media_player">Change how media player looks</string>
    <string name="activity_title_miscellaneous">Miscellaneous</string>
    <string name="activity_desc_miscellaneous">Miscellaneous customization</string>
    <string name="activity_title_transparency_blur">Transparency &amp; Blur</string>
    <string name="activity_desc_transparency_blur">Enable QS blur and transparency</string>
    <string name="activity_title_quick_settings">Quick Settings</string>
    <string name="activity_desc_quick_settings">Tweaks related to QS panel</string>
    <string name="activity_title_battery_style">Battery Style</string>
    <string name="activity_desc_battery_style">Customize battery icon view</string>
    <string name="activity_title_header_image">Header Image</string>
    <string name="activity_desc_header_image">Add custom image on QS panel</string>
    <string name="activity_title_header_clock">Header Clock</string>
    <string name="activity_desc_header_clock">Add custom clock on QS panel</string>
    <string name="activity_title_lockscreen_clock">Lockscreen Clock</string>
    <string name="activity_desc_lockscreen_clock">Add custom clock on lockscreen</string>
    <string name="activity_title_lockscreen_weather">Lockscreen Weather</string>
    <string name="activity_desc_lockscreen_weather">Add weather on lockscreen</string>
    <string name="activity_title_lockscreen_widget">Lockscreen Widgets</string>
    <string name="activity_desc_lockscreen_widget">Add widgets on lockscreen</string>
    <string name="activity_title_depth_wallpaper">Depth Wallpaper</string>
    <string name="activity_desc_depth_wallpaper">Show iOS like depth wallpaper</string>
    <string name="activity_title_background_chip">Background Chip</string>
    <string name="activity_desc_background_chip">Add colored chip behind clock</string>
    <string name="activity_title_xposed_others">Others</string>
    <string name="activity_desc_xposed_others">Miscellaneous xposed tweaks</string>
    <string name="activity_title_lockscreen_album_art">Media Album Art</string>
    <string name="section_title_for_pixel_roms">For Pixel Roms</string>
    <string name="light_theme_title">Light Theme</string>
    <string name="light_theme_desc">Light QS theme in light mode\nMust use custom QS Shape</string>
    <string name="dual_tone_title">Dual Tone</string>
    <string name="dual_tone_desc">Use different color for header</string>
    <string name="section_title_for_custom_roms">For Custom Roms</string>
    <string name="black_theme_title">Pixel Black Theme</string>
    <string name="black_theme_desc">Black QS theme in light mode\nMust use Pixel QS Shape\nSwitch dark theme to fix text color</string>
    <string name="section_title_translucent_theme">Translucent Theme</string>
    <string name="fluid_qs_theme_title">Fluid QS Theme</string>
    <string name="fluid_qs_theme_desc">Two tone translucent QS theme\nSwitch theme to fix color\nDo not use custom shapes</string>
    <string name="notification_transparency_title">Notification Transparency</string>
    <string name="notification_transparency_desc">Notification transparency for Fluid QS\nDo not use custom notification style</string>
    <string name="power_menu_transparency_title">Power Menu Transparency</string>
    <string name="power_menu_transparency_desc">Power menu transparency for Fluid QS\nDo not use custom notification style</string>
    <string name="section_title_others">Others</string>
    <string name="fix_qs_tile_color_title">Fix QS Tile Color</string>
    <string name="fix_qs_tile_color_desc">Fix custom QS tile style on android 14</string>
    <string name="fix_notification_color_title">Fix Notification Color</string>
    <string name="fix_notification_color_desc">Fix custom notification style on android 14</string>
    <string name="fix_notification_footer_button_color_title">Fix Notification Footer Button Color</string>
    <string name="fix_notification_footer_button_color_desc">Fix custom footer button style on android 14</string>
    <string name="hide_qs_on_lockscreen_title">Hide QS on Lockscreen</string>
    <string name="hide_qs_on_lockscreen_desc">Disable quick settings panel on secured lockscreen</string>
    <string name="perimeter_alpha_title">Perimeter Alpha</string>
    <string name="perimeter_alpha_desc">Make battery perimeter semi transparent</string>
    <string name="fill_alpha_title">Fill Alpha</string>
    <string name="fill_alpha_desc">Make battery fill semi transparent</string>
    <string name="rainbow_color_title">Rainbow Color</string>
    <string name="rainbow_color_desc">Show different color based on battery level</string>
    <string name="blend_color_title">Blend Color</string>
    <string name="blend_color_desc">Blend battery color with custom color</string>
    <string name="fill_color_title">Fill Color</string>
    <string name="fill_color_desc">Fill battery with custom color</string>
    <string name="fill_gradient_color_title">Fill Gradient Color</string>
    <string name="fill_gradient_color_desc">Fill battery with gradient color</string>
    <string name="charging_fill_color_title">Charging Fill Color</string>
    <string name="charging_fill_color_desc">Change color of charging battery</string>
    <string name="powersave_fill_color_title">Powersave Fill Color</string>
    <string name="powersave_fill_color_desc">Change color of powersave battery</string>
    <string name="powersave_indicator_color_title">Powersave Indicator Color</string>
    <string name="powersave_indicator_color_desc">Change color of powersave indicator</string>
    <string name="sb_clock_size_switch_title">Custom Statusbar Clock Size</string>
    <string name="sb_clock_size_switch_desc">Set a custom size for Statusbar Clock</string>
    <string name="sb_clock_size">Statusbar Clock Size</string>
    <string name="colored_statusbar_icon_title">Colored Statusbar Icon</string>
    <string name="colored_statusbar_icon_desc">Show app icon as notification icon</string>
    <string name="hide_ls_carrier_title">Hide LS Carrier</string>
    <string name="hide_ls_carrier_desc">Hide carrier name on lockscreen</string>
    <string name="hide_ls_statusbar_title">Hide LS Statusbar</string>
    <string name="hide_ls_statusbar_desc">Hide statusbar on lockscreen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="hide_ls_lock_icon_title">Hide LS Lock Icon</string>
    <string name="hide_ls_lock_icon_desc">Hide lock icon view on lockscreen</string>
    <string name="ls_wallpaper_blur_title">Wallpaper Blur</string>
    <string name="ls_wallpaper_blur_desc">Apply blur effect on lockscreen</string>
    <string name="ls_wallpaper_blur_radius_title">Wallpaper Blur Intensity</string>
    <string name="changelog">Changelog</string>
    <string name="import_export">Import/Export</string>
    <string name="export_settings">Export Settings</string>
    <string name="import_settings">Import Settings</string>
    <string name="activity_title_info">About</string>
    <string name="app_updates">App Updates</string>
    <string name="media_art_summary">Display media album art when available</string>
</resources>