<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:search="http://schemas.android.com/apk/com.drdisagree.iconify.ui.preferences.preferencesearch">

    <com.drdisagree.iconify.ui.preferences.PreferenceMenu
        android:icon="@drawable/ic_xposed_clock"
        android:key="xposedLockscreenClock"
        android:summary="@string/activity_desc_lockscreen_clock"
        android:title="@string/activity_title_lockscreen_clock"
        app:fragment="com.drdisagree.iconify.ui.fragments.xposed.LockscreenClockParent" />

    <com.drdisagree.iconify.ui.preferences.PreferenceMenu
        android:icon="@drawable/ic_xposed_lockscreen_weather"
        android:key="xposedLockscreenWeather"
        android:summary="@string/activity_desc_lockscreen_weather"
        android:title="@string/activity_title_lockscreen_weather"
        app:fragment="com.drdisagree.iconify.ui.fragments.xposed.LockscreenWeather" />

    <com.drdisagree.iconify.ui.preferences.PreferenceMenu
        android:icon="@drawable/ic_xposed_lockscreen_widgets"
        android:key="xposedLockscreenWidgets"
        android:summary="@string/activity_desc_lockscreen_widget"
        android:title="@string/activity_title_lockscreen_widget"
        app:fragment="com.drdisagree.iconify.ui.fragments.xposed.LockscreenWidget" />

    <com.drdisagree.iconify.ui.preferences.PreferenceMenu
        android:icon="@drawable/ic_xposed_depth_wallpaper"
        android:key="xposedDepthWallpaper"
        android:summary="@string/activity_desc_depth_wallpaper"
        android:title="@string/activity_title_depth_wallpaper"
        app:fragment="com.drdisagree.iconify.ui.fragments.xposed.DepthWallpaper" />

    <com.drdisagree.iconify.ui.preferences.PreferenceMenu
        android:icon="@drawable/ic_xposed_album_art"
        android:key="xposedAlbumArt"
        android:summary="@string/media_art_summary"
        android:title="@string/activity_title_lockscreen_album_art"
        app:fragment="com.drdisagree.iconify.ui.fragments.xposed.AlbumArt" />

    <com.drdisagree.iconify.ui.preferences.PreferenceCategory
        android:key="transparencyXposedSettings"
        android:title="@string/lock_screen"
        app:iconSpaceReserved="false"
        search:ignore="true">

        <com.drdisagree.iconify.ui.preferences.SwitchPreference
            android:key="xposed_lockscreenwallpaperblur"
            android:summary="@string/ls_wallpaper_blur_desc"
            android:title="@string/ls_wallpaper_blur_title"
            app:iconSpaceReserved="false" />

        <com.drdisagree.iconify.ui.preferences.SliderPreference
            android:dependency="xposed_lockscreenwallpaperblur"
            android:key="xposed_lockscreenwallpaperblurradius"
            android:title="@string/ls_wallpaper_blur_radius_title"
            app:defaultValue="25"
            app:iconSpaceReserved="false"
            app:maxVal="25"
            app:minVal="0"
            app:tickInterval="1"
            app:valueFormat="px" />

        <com.drdisagree.iconify.ui.preferences.SwitchPreference
            android:key="xposed_hidelockscreenlockicon"
            android:summary="@string/hide_ls_lock_icon_desc"
            android:title="@string/hide_ls_lock_icon_title"
            app:iconSpaceReserved="false" />

        <com.drdisagree.iconify.ui.preferences.SwitchPreference
            android:key="xposed_hideqsonlockscreen"
            android:summary="@string/hide_qs_on_lockscreen_desc"
            android:title="@string/hide_qs_on_lockscreen_title"
            app:iconSpaceReserved="false" />

        <com.drdisagree.iconify.ui.preferences.SwitchPreference
            android:key="xposed_hidelockscreencarrier"
            android:summary="@string/hide_ls_carrier_desc"
            android:title="@string/hide_ls_carrier_title"
            app:iconSpaceReserved="false" />

        <com.drdisagree.iconify.ui.preferences.SwitchPreference
            android:key="xposed_hidelockscreenstatusbar"
            android:summary="@string/hide_ls_statusbar_desc"
            android:title="@string/hide_ls_statusbar_title"
            app:iconSpaceReserved="false" />

    </com.drdisagree.iconify.ui.preferences.PreferenceCategory>

</PreferenceScreen>