<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:orientation="vertical"
    tools:parentTag="LinearLayout">

    <com.drdisagree.iconify.ui.widgets.SwitchWidget
        android:id="@+id/perimeter_alpha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:summaryText="@string/perimeter_alpha_desc"
        app:titleText="@string/perimeter_alpha_title" />

    <com.drdisagree.iconify.ui.widgets.SwitchWidget
        android:id="@+id/fill_alpha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:summaryText="@string/fill_alpha_desc"
        app:titleText="@string/fill_alpha_title" />

    <com.drdisagree.iconify.ui.widgets.SwitchWidget
        android:id="@+id/rainbow_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:summaryText="@string/rainbow_color_desc"
        app:titleText="@string/rainbow_color_title" />

    <com.drdisagree.iconify.ui.widgets.SwitchWidget
        android:id="@+id/blend_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:summaryText="@string/blend_color_desc"
        app:titleText="@string/blend_color_title" />

    <LinearLayout
        android:id="@+id/color_pickers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <com.drdisagree.iconify.ui.widgets.ColorPickerWidget
            android:id="@+id/fill_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summaryText="@string/fill_color_desc"
            app:titleText="@string/fill_color_title" />

        <com.drdisagree.iconify.ui.widgets.ColorPickerWidget
            android:id="@+id/fill_gradient_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summaryText="@string/fill_gradient_color_desc"
            app:titleText="@string/fill_gradient_color_title" />

        <com.drdisagree.iconify.ui.widgets.ColorPickerWidget
            android:id="@+id/charging_fill_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summaryText="@string/charging_fill_color_desc"
            app:titleText="@string/charging_fill_color_title" />

        <com.drdisagree.iconify.ui.widgets.ColorPickerWidget
            android:id="@+id/powersave_fill_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summaryText="@string/powersave_fill_color_desc"
            app:titleText="@string/powersave_fill_color_title" />

        <com.drdisagree.iconify.ui.widgets.ColorPickerWidget
            android:id="@+id/powersave_icon_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summaryText="@string/powersave_indicator_color_desc"
            app:titleText="@string/powersave_indicator_color_title" />

    </LinearLayout>
</merge>